--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </li>
         </ul>
         <li class="nav-item">
-          <button class="btn btn-outline-success" type="submit">Contact</button>
-          <a class="nav-link" href="#contact">Contact</a>
+ 
+          <a class="nav-link btn btn-outline-success " href="#contact" type="submit">Contact</a>
         </li>
        
       </div>
@@ -376,7 +376,7 @@ hiddenElements.forEach((el) => observer.observe(el));
 </body>
 <footer class="footer fixed-bottom">
   <div class="container-lg text-center" style=" z-index: 22; background-color:rgba(3, 3, 3, 0.3);">
-    © Sadasu, FLC,
+    © Gaa, FLC,
   </div>
 </footer>
 </html>
